--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,16 @@
         <div class="card1">
             <div class="topboard">
                 <h2>Recent scores</h2>
-                <button>Refresh</button>
+                <button id="ref">Refresh</button>
             </div>
             <div class="board">
-                <ul>
-                   <li>Name: 100</li>
-                   <li>Name: 20</li>
-                   <li>Name: 50</li>
-                   <li>Name: 120</li>
-                   <li>Name: 80</li> 
+                <ul class="score">
                 </ul>
             </div>
         </div>
         <div class="card2">
             <h2>Add your score</h2>
-            <form action="">
+            <form action="" id="form">
                 <input type="text" id="Name" placeholder="Your name"><br><br>
                 <input type="number" id="Score" placeholder="Your score"><br><br>
                 <input type="submit" value="Submit">
