--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,8 @@
             </form>
         </div>
     </section>
+    <footer>
+        <p>@Copyright by Abbas</p>
+    </footer>
 </body>
 </html>
