--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
     <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>LeaderBoard</title>
 </head>
 <body>
